# app/Http/Controllers/PostController.php
@@ -26,7 +26,7 @@ class PostController extends Controller
      * @SWG\Get(
      *   path="/post/{id}",
      *   summary="Retorna os dados do post escolhido",
-     *   operationId="userInfo",
+     *   operationId="postInfo",
      *   produces={"application/json"},
      *   tags={"Post"},
      *   @SWG\Parameter(
@@ -52,7 +52,7 @@ class PostController extends Controller
      * @SWG\Get(
      *   path="/post/profile/{id}",
      *   summary="Retorna os posts do perfil",
-     *   operationId="userInfo",
+     *   operationId="postProfileInfo",
      *   produces={"application/json"},
      *   tags={"Post"},
      *   @SWG\Parameter(
@@ -72,5 +72,92 @@ class PostController extends Controller
     public function getProfilePosts($id)
     {
         return $this->postService->getProfilePosts($id);
+    }
+
+    /**
+     * @SWG\Post(
+     *   path="/post",
+     *   summary="Cadastra a publicação",
+     *   operationId="post",
+     *   produces={"application/json"},
+     *   tags={"Post"},
+     *   @SWG\Parameter(
+     *     name="body",
+     *     in="body",
+     *     required=true,
+     *     @SWG\Schema(
+     *         @SWG\Property(property="description", type="string",),
+     *         @SWG\Property(property="image_path", type="string",),
+     *         @SWG\Property(property="profile_id", type="integer",),
+     *     ),
+     *   ),
+     *   @SWG\Response(response=200, description="Successful operation"),
+     *   @SWG\Response(response=406, description="Not acceptable"),
+     *   @SWG\Response(response=500, description="Internal server error")
+     * )
+     */
+    public function store(Request $request)
+    {
+        return $this->postService->store($request);
+    }
+
+    /**
+     * @SWG\Put(
+     *   path="/post",
+     *   summary="Atualiza a publicação",
+     *   operationId="postUpdate",
+     *   produces={"application/json"},
+     *   tags={"Post"},
+     *   @SWG\Parameter(
+     *     name="body",
+     *     in="body",
+     *     required=true,
+     *     @SWG\Schema(
+     *         @SWG\Property(property="id", type="integer",),
+     *         @SWG\Property(property="description", type="string",),
+     *         @SWG\Property(property="image_path", type="string",),
+     *         @SWG\Property(property="profile_id", type="integer",),
+     *         @SWG\Property(property="like", type="integer",),
+     *     ),
+     *   ),
+     *   @SWG\Response(response=200, description="Successful operation"),
+     *   @SWG\Response(response=406, description="Not acceptable"),
+     *   @SWG\Response(response=500, description="Internal server error")
+     * )
+     */
+    public function update(Request $request)
+    {
+        return $this->postService->update($request);
+    }
+
+    /**
+     * @SWG\Delete(
+     *   path="/post/{id}",
+     *   summary="Delete uma publicação",
+     *   operationId="postDelete",
+     *   produces={"application/json"},
+     *   tags={"Post"},
+     *   @SWG\Parameter(
+     *     name="body",
+     *     in="body",
+     *     required=true,
+     *     @SWG\Schema(
+     *         @SWG\Property(property="id", type="integer",),
+     *         @SWG\Property(property="description", type="string",),
+     *         @SWG\Property(property="image_path", type="string",),
+     *         @SWG\Property(property="profile_id", type="integer",),
+     *         @SWG\Property(property="like", type="integer",),
+     *     ),
+     *   ),
+     *   @SWG\Response(response=200, description="Successful operation"),
+     *   @SWG\Response(response=406, description="Not acceptable"),
+     *   @SWG\Response(response=500, description="Internal server error")
+     * )
+     * @param $id
+     * @return bool
+     */
+    public function delete($id)
+    {
+        return $this->postService->delete($id);
     }
 }
